--- a/SimpleCompassMVCExample/Views/Home/Index.cshtml
+++ b/SimpleCompassMVCExample/Views/Home/Index.cshtml
@@ -1,1 +1,13 @@
-﻿
+﻿<div class="grid">
+    <div class="col full">
+        <h1>Full Width</h1>
+    </div>
+</div>
+<div class="grid">
+    <div class="col half">
+        <h2>Half Width</h2>
+    </div>
+    <div class="col half">
+        <h2>Half Width</h2>
+    </div>
+</div>
