--- a/SimpleCompassMVCExample/sass/screen.scss
+++ b/SimpleCompassMVCExample/sass/screen.scss
@@ -3,4 +3,35 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
+@import "compass";
 @import "compass/reset";
+
+$layout-width: 1400px;
+$vertical-spacing: 20px;
+$gutter: 24px;
+
+* {
+    @include box-sizing(border-box);
+}
+
+.grid {
+    margin: 0 auto $vertical-spacing ;
+	max-width:$layout-width;
+    @include pie-clearfix;
+    .col {
+        float: left;
+        padding: 0 $gutter;
+        &.full {
+            width:100%;
+        }
+		&.half {
+			width: 50%;
+		}
+    }
+}
+
+h1, h2, h3 {
+	//for debugging our grid
+	padding:20px;
+	background-color:#eee;
+}
