Created quarter width layout

--- a/SimpleCompassMVCExample/Views/Home/Index.cshtml
+++ b/SimpleCompassMVCExample/Views/Home/Index.cshtml
@@ -11,3 +11,14 @@
         <h2>Half Width</h2>
     </div>
 </div>
+<div class="grid">
+    <div class="col half">
+        <h2>Half Width</h2>
+    </div>
+    <div class="col quarter">
+        <h2>Quarter Width</h2>
+    </div>
+    <div class="col quarter">
+        <h2>Quarter Width</h2>
+    </div>
+</div>
