--- a/SimpleCompassMVCExample/Content/screen.css
+++ b/SimpleCompassMVCExample/Content/screen.css
@@ -99,8 +99,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .grid .col.half {
   width: 50%;
 }
+/* line 30, ../sass/screen.scss */
+.grid .col.quarter {
+  width: 25%;
+}
 
-/* line 33, ../sass/screen.scss */
+/* line 36, ../sass/screen.scss */
 h1, h2, h3 {
   padding: 20px;
   background-color: #eee;
