Created third and two thirds layout

--- a/SimpleCompassMVCExample/Views/Home/Index.cshtml
+++ b/SimpleCompassMVCExample/Views/Home/Index.cshtml
@@ -22,3 +22,11 @@
         <h2>Quarter Width</h2>
     </div>
 </div>
+<div class="grid">
+    <div class="col third">
+        <h2>Third Width</h2>
+    </div>
+    <div class="col two-thirds">
+        <h2>Two Thirds Width</h2>
+    </div>
+</div>
