--- a/SimpleCompassMVCExample/Content/screen.css
+++ b/SimpleCompassMVCExample/Content/screen.css
@@ -103,8 +103,16 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .grid .col.quarter {
   width: 25%;
 }
-
+/* line 33, ../sass/screen.scss */
+.grid .col.third {
+  width: 33.33%;
+}
 /* line 36, ../sass/screen.scss */
+.grid .col.two-thirds {
+  width: 66.66%;
+}
+
+/* line 42, ../sass/screen.scss */
 h1, h2, h3 {
   padding: 20px;
   background-color: #eee;
