--- a/SimpleCompassMVCExample/sass/screen.scss
+++ b/SimpleCompassMVCExample/sass/screen.scss
@@ -30,6 +30,12 @@ $gutter: 24px;
 		&.quarter {
 		    width: 25%;
 		}
+        &.third {
+	        width: 33.33%;
+        }
+        &.two-thirds {
+            width: 66.66%;
+        }
     }
 }
 
