--- a/SimpleCompassMVCExample/Views/Home/Index.cshtml
+++ b/SimpleCompassMVCExample/Views/Home/Index.cshtml
@@ -30,3 +30,26 @@
         <h2>Two Thirds Width</h2>
     </div>
 </div>
+<div class="grid ">
+    <div class="col two-thirds">
+        <div class="grid ">
+            <div class="col quarter">
+                <h3>Quarter Width</h3>
+            </div>
+            <div class="col quarter">
+                <h3>Quarter Width</h3>
+            </div>
+            <div class="col quarter">
+                <h3>Quarter Width</h3>
+            </div>
+            <div class="col quarter">
+                <h3>Quarter Width</h3>
+            </div>
+        </div>
+    </div>
+    <div class="col third">
+        <div class="display">
+            <h3>Third Width</h3>
+        </div>
+    </div>
+</div>
