--- a/SimpleCompassMVCExample/Content/screen.css
+++ b/SimpleCompassMVCExample/Content/screen.css
@@ -67,14 +67,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 13, ../sass/screen.scss */
+/* line 14, ../sass/screen.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 17, ../sass/screen.scss */
+/* line 18, ../sass/screen.scss */
 .grid {
   margin: 0 auto 20px;
   max-width: 1400px;
@@ -86,37 +86,50 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: table;
   clear: both;
 }
-/* line 21, ../sass/screen.scss */
+/* line 22, ../sass/screen.scss */
 .grid .col {
   float: left;
   padding: 0 24px;
 }
-/* line 24, ../sass/screen.scss */
+/* line 25, ../sass/screen.scss */
 .grid .col.full {
   width: 100%;
 }
-/* line 27, ../sass/screen.scss */
+/* line 28, ../sass/screen.scss */
 .grid .col.half {
   width: 50%;
 }
-/* line 30, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 .grid .col.quarter {
   width: 25%;
 }
-/* line 33, ../sass/screen.scss */
+/* line 34, ../sass/screen.scss */
 .grid .col.third {
   width: 33.33%;
 }
-/* line 36, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 .grid .col.two-thirds {
   width: 66.66%;
 }
-/* line 40, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 .grid .col .grid {
   margin: 0 -24px;
 }
 
-/* line 46, ../sass/screen.scss */
+@media only screen and (max-width: 767px) {
+  /* Small Device Styles here */
+  /* line 48, ../sass/screen.scss */
+  .grid .col {
+    float: none;
+    width: auto !important;
+    padding: 0 !important;
+  }
+  /* line 53, ../sass/screen.scss */
+  .grid .col .grid {
+    margin: 0;
+  }
+}
+/* line 58, ../sass/screen.scss */
 h1, h2, h3 {
   padding: 20px;
   background-color: #eee;
