--- a/SimpleCompassMVCExample/sass/screen.scss
+++ b/SimpleCompassMVCExample/sass/screen.scss
@@ -9,6 +9,7 @@
 $layout-width: 1400px;
 $vertical-spacing: 20px;
 $gutter: 24px;
+$small-device-width:767px;
 
 * {
     @include box-sizing(border-box);
@@ -42,7 +43,18 @@ $gutter: 24px;
 		}
     }
 }
-
+@media only screen and (max-width: $small-device-width) {
+  /* Small Device Styles here */
+	.grid .col {
+        float:none;
+		width: auto !important;
+		padding: 0 !important;
+		// nested grid
+		.grid {
+			margin: 0;
+		}
+    }
+}
 h1, h2, h3 {
 	//for debugging our grid
 	padding:20px;
